src/App.css
.app {
  display: flex;
  background-color: #fff;
  height: 100%;
  flex-direction: column;
}

.description-modal {
  width: 400px;
  height: 180px;
  background: white;
}

.main-container {
  width: auto;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  overflow-y: auto;
}

.auth-container {
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: center;
}

.auth-wrapper {
  padding: 10px;
  border-radius: 15px;
  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.6);
  background-color: #34568B;
}

.button {
  cursor: pointer;

  &:hover {
    transform: scale(1.02);
  }

  &:active {
    transform: scale(.98);
  }
}

